app/assets/stylesheets/common/base/topic-post.scss
/* ... */
.broken-image,
.blocked-hotlinked-placeholder {
  &:not(a) {
    color: var(--primary-low-mid-or-secondary-high);
  }

  display: inline-flex;
  flex-direction: column;
  border: 1px solid var(--primary-low);
  align-items: center;
  justify-content: center;

  .d-icon {
    margin: 16px;
    font-size: var(--font-up-5);
  }

  .notice {
    margin: 0 0.5em 0.5em 0.5em;
  }
}

/* below standard tablet portrait ----------- */

.reply-to-tab {
  display: flex;
  align-items: center;
  margin-right: 2em;
  max-width: 400px;
  overflow: hidden;

  img {
    margin: 0 0.25em;
  }
}

// Select posts

.topic-post {
  &.selected {
    article.boxed {
      .select-posts {
        button.select-post {
          background-color: var(--tertiary);
          color: var(--secondary);
          border-color: var(--tertiary);
        }
      }
      .topic-body {
        .contents:after {
          display: none;
        }
      }
    }
  }
  article.boxed {
    position: relative;
    .select-posts {
      position: absolute;
      right: 7em;
      z-index: z("dropdown");
      top: 0.5em;
      height: 100px;
      button {
        margin-left: 8px;
        background-color: var(--primary-low);
        color: var(--primary);
        box-shadow: var(--shadow-dropdown);
      }
    }
  }
}

@media all and (max-width: 767px) {
  .reply-to-tab {
    span {
      display: none;
    }
  }
  .user-title {
    float: left;
    clear: left;
  }
}

.signup-cta {
  box-sizing: border-box;
  max-width: calc(var(--topic-body-width) + 4.5em);
  padding: 3em 5em 2em
    calc(var(--topic-avatar-width) + var(--topic-body-width-padding));
  @include breakpoint(mobile-extra-large) {
    padding: 1.5em 1.5em 0.25em;
  }
  h3 {
    margin-bottom: 0.5em;
  }
  a {
    text-decoration: underline;
  }
  .buttons {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    margin: 1.5em 0 1em;
    > * {
      margin-bottom: 0.5em;
    }
    .btn {
      margin-right: 0.5em;
      white-space: nowrap;

      .d-icon {
        color: inherit;
      }

      &.btn-remind {
        background: var(--primary-very-low);
        margin-right: auto;
        @include hover {
          background: var(--primary-medium);
        }
      }
      @include breakpoint(mobile-extra-large) {
        &.btn-primary {
          margin-right: 100%;
        }
      }
    }
  }
}

.post-notice {
  box-sizing: border-box;
  align-items: center;
  background-color: var(--tertiary-low);
  border-top: 1px solid var(--primary-low);
  display: flex;
  width: 100%;
  max-width: calc(
    var(--topic-body-width) + (var(--topic-body-width-padding) * 2) +
      var(--topic-avatar-width)
  );
  padding: var(--topic-body-width-padding);
  padding-left: 0;
  &.old {
    background-color: unset;
    color: var(--primary-medium);

    .d-icon {
      color: var(--primary-medium);
    }
  }

  p {
    margin: 0;
  }

  .d-icon {
    font-size: 2em;
    width: var(--topic-avatar-width);
    color: var(--primary-high);
    margin-right: var(--topic-body-width-padding);
  }
}

#topic-footer-buttons {
  margin: var(--below-topic-margin) 0;
  padding: 0;

  .topic-footer-main-buttons {
    display: flex;
    flex-wrap: wrap;
    align-items: stretch; // aligns items by making them the same height
    button,
    details {
      margin-right: 0.54em;
    }
    > * {
      margin-bottom: 0.5em; // all immediate children should have a bottom margin in case of wrapping
    }
    .topic-admin-menu-button-container {
      display: inline-flex;
      .topic-admin-menu-button {
        display: flex; // to make this button match siblings behavior, all of its parents need to be flex
      }
    }
  }

  .pinned-button:not(.is-hidden) + .topic-notifications-button {
    margin-top: 0;
  }

  .pinned-button,
  .topic-notifications-button {
    margin: 0.5em 0 1em;

    .reason {
      color: var(--primary-high);
      display: inline-flex;
      margin: 0;
      align-items: center;

      .dropdown-select-box {
        .select-kit-selected-name {
          width: 100%;
          overflow: hidden;
        }
        .name {
          @include ellipsis;
        }
      }

      .text {
        margin-left: 0.5em;
        line-height: var(--line-height-medium);
      }
    }
  }
}

iframe {
  max-width: 100%;
  max-height: #{"min(1000px, 200vh)"};
}

.post-admin-menu {
  display: inline-flex;
  flex-direction: column;
  box-sizing: border-box;
  width: auto;
  max-width: 320px;
  position: absolute;
  text-align: left;
  bottom: -2px;
  right: 15px;
}

.posts-filtered-notice {
  position: -webkit-sticky;
  position: sticky;
  background-color: var(--tertiary-low);
  bottom: 0;
  padding: 1em;
  margin-top: 0.5em;
  text-align: center;
  z-index: 2;
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: calc(
    var(--topic-body-width) + (var(--topic-body-width-padding) * 2) +
      var(--topic-avatar-width)
  );

  .filtered-avatar {
    margin: 0 0.5em;
    + .names {
      flex: inherit;
    }
  }

  .filtered-replies-show-all {
    margin-left: 1em;
  }

  .filtered-user-row {
    @include ellipsis;
  }
}
/* ... */

